--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@remixicon/react": "^4.6.0",
     "clsx": "^2.1.1",
+    "geist": "^1.4.2",
     "lightweight-charts": "^5.0.8",
     "next": "15.4.6",
     "react": "19.1.0",
@@ -19,6 +20,7 @@
     "tailwind-variants": "^2.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
