Added tradingview widget

--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "^2.1.0"
+    "tailwind-variants": "^2.1.0",
+    "d3-dsv": "^1.0.8",
+    "d3-format": "^1.2.1",
+    "d3-scale": "^1.0.7",
+    "d3-time-format": "^2.1.1",
+    "prop-types": "^15.6.0",
+    "react-bootstrap": "^0.31.5",
+    "react-stockcharts": "^0.7.8",
+    "shortid": "^2.2.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
